---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Instead of only adding, match the slider always
    - Nullify collision box of the hidden entities
    - Increase infinity pipe fluidbox
    - Fix fluid throughput being inexplicably low
    - Open the gui with the current value
    - Add blueprint support
    - Preserve setting after death
    - Fix changing quality targeting the hidden thrusters
    - Preserve settings when changing quality
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 02. 19
  Info:
    - Tint the thruster interface purple
    - Place and link the infinity pipes again
    - Give the thruster interface a cute little nub
    - Tweak fluid consumption to always display 120/s
    - Hide fluid icons
    - Hide the infinity pipes
    - Make a struct for the entity and its pipes
    - Listen for the thruster gui opened event
    - Setup the gui with entity preview and slider
    - Add 0 ? 100 above the slider
    - Replace the ? with the current slider value
    - Test adding the internal thrusters
    - Cleanup the thruster during the deathrattle
    - Use the stone wall as a battering ram
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 02. 19
  Info:
    - Rename creative thruster to thruster interface
    - Get the thruster performance curve to show
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 16
  Info:
    - Initial commit