@@ -11,6 +11,7 @@ Date: ????
     - Preserve setting after death
     - Fix changing quality targeting the hidden thrusters
     - Preserve settings when changing quality
+    - Disable the invulnerable stone walls
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2025. 02. 19
